# SMBNA

./: CHANGELOG.md  COMMIT_MESSAGE.md  README.md  pytest.ini
docs/: README.md  api_reference.md  architecture_overview.md  config_reference.md  development_guide.md  testing_guide.md  troubleshooting.md
results/: ablation_refusal.csv  ablation_refusal.parquet  monte_carlo.csv  monte_carlo.parquet
smbna/: README.md  __init__.py  pyproject.toml
smbna/analysis/: compare_refusal_vs_baseline.py  latex_export.py  metrics.py  plot_innovation_hist.py  plot_trajectory.py  significance.py
smbna/arbitration/: __init__.py  trust_engine.py
smbna/baselines/: ekf.py
smbna/beliefs/: __init__.py  base.py  dead_reckoning.py  gps.py  ins.py  invariants.py  leo.py  magnetic.py  refusal_logic.py
smbna/core/: __init__.py  belief_state.py  pipeline.py  scoring.py
smbna/figures/: figure1_architecture.py  figure2_failure.py
smbna/invariants/: __init__.py  base.py  coherence.py  covariance.py  earth_field.py  physics.py  temporal.py
smbna/plots/: refusal_tradeoff.py  seed_stratified.py
smbna/sensors/: __init__.py  interfaces.py
smbna/simulation/: __init__.py  compare_variants.py  environment.py  experiment_io.py  run_ablation.py  run_all_simulations.py  run_monte_carlo.py  run_simulation.py  run_sweep.py  scenarios.py  spoofing.py
smbna/tests/: README.md  __init__.py  conftest.py
smbna/tests/test_arbitration/: test_trust_engine.py
smbna/tests/test_beliefs/: test_refusal_logic.py
smbna/tests/test_core/: test_belief_state.py
smbna/tests/test_invariants/: test_physics.py  test_temporal.py
smbna/tests/test_simulation/: test_run_simulation_smoke.py
smbna/utils/: logging.py  math.py
smbna/visualization/: error_plot.py  plot_ci.py  plot_overlay.py
