[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "smbna"
version = "1.0.0"
description = "Secure Multi-Belief Navigation Arbitration for Safe Autonomous Systems"
readme = "smbna/README.md"
requires-python = ">=3.8"
authors = [
    {name = "MoniGarr", url = "https://github.com/monigarr/SMBNA"}
]
license = {text = "Research and evaluation purposes"}
keywords = ["navigation", "autonomous systems", "sensor fusion", "safety"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "numpy>=1.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-xdist>=3.0.0",
    "pytest-mock>=3.10.0",
    "black>=22.0.0",
    "ruff>=0.1.0",
]

analysis = [
    "pandas>=1.3.0",
    "scipy>=1.7.0",
]

visualization = [
    "matplotlib>=3.5.0",
]

figures = [
    "graphviz>=0.20.0",
]

all = [
    "smbna[dev,analysis,visualization,figures]",
]

[tool.pytest.ini_options]
testpaths = ["smbna/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.coverage.run]
source = ["smbna"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/test_*.py",
    "setup.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

precision = 2
show_missing = True
skip_covered = False

